fix: fix web app layout
move display when scrollbars are always visible

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -57,7 +57,7 @@ span.tile {
   display: flex;
   flex-direction: column-reverse;
   overflow: auto;
-  padding: 2;
+  padding-right: 30px;
   border: 1px solid transparent;
 }
 
